--- a/app/views/stories/story_form.html.haml
+++ b/app/views/stories/story_form.html.haml
@@ -16,4 +16,4 @@
     = form.text_area :text, class: 'form-control', rows: 10
   %p.text-right
     = form.submit class: ['btn', 'btn-success']
-    = form.button 'Cancel', class: ['btn', 'btn-default']
+    = form.button t('cancel_button'), class: ['btn', 'btn-default']
