--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -2,9 +2,9 @@
 
 - content_for :sidebar do
   - if current_user == @story.user
-    %h3 Actions
+    %h3= t :actions_header
     %ul.nav.nav-pills.nav-stacked
       %li
-        = button_to 'Edit', edit_story_path(@story), method: :get, class: ['btn', 'btn-default']
+        = button_to t(:edit_button), edit_story_path(@story), method: :get, class: ['btn', 'btn-default']
       %li
-        = button_to 'Delete', story_path(@story), method: :delete, class: ['btn', 'btn-danger']
+        = button_to t(:delete_button), story_path(@story), method: :delete, class: ['btn', 'btn-danger']
