Added translations and languages tables

--- a/app/views/stories/_stories_sidebar.html.haml
+++ b/app/views/stories/_stories_sidebar.html.haml
@@ -2,4 +2,4 @@
 %ul.nav.nav-pills.nav-stacked
   - stories.each do |story|
     %li
-      %a{href: "#story-#{story.id}"}= story.title
+      %a{href: "#story-#{story.id}"}= story.translation.title
