--- a/app/assets/stylesheets/stories.css.scss
+++ b/app/assets/stylesheets/stories.css.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the stories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.paragraph .dropdown {
+  float: right;
+}
+
+.paragraph .dropdown .btn {
+  position: absolute;
+  bottom: 0;
+  right: 0px;
+  z-index: 100;
+}
+
+.paragraph .dropdown .dropdown-menu {
+  position: absolute;
+  left: -30px;
+}
+
+label, textarea {
+  width: 100%;
+}
+
+textarea {
+  height: 400px;
+}
